@@ -1,3 +1,9 @@
+2010-03-12  John Oliver <joliver@tresys.com>
+
+	* Ensure architecture independent parts of python SWIG wrapper
+	  get installed into the same directory as the architecture
+	  dependent parts.
+
 2010-03-12  Chris PeBenito <cpebenito@tresys.com>
 
 	* Fix seaudit/libseaudit headers.
